working_controllers/Disallow_service_discovery/Disallow_Service_Discovery/test-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rejected-pod
  namespace: webhook-demo
spec:
  containers:
    - name: nginx
      image: nginx:alpine
